--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,12 +19,14 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
+                <ul class="navbar-nav">                    <li class="nav-item">
                         <a class="nav-link {% if request.endpoint == 'index' %}active{% endif %}" href="/">Trang chủ</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link {% if request.endpoint == 'results' %}active{% endif %}" href="/results">Kết quả</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.endpoint == 'debug' %}active{% endif %}" href="/debug">Debug</a>
                     </li>
                 </ul>
             </div>
